Alteração no controle de erros do cadastro.

--- a/views/paciente/teladecadastro.ejs
+++ b/views/paciente/teladecadastro.ejs
@@ -58,8 +58,8 @@
 
       <div class="mb-3">
         <label for="verificaSenha" class="form-label">Confirmar senha</label>
-        <input type="password" name="verificaSenha" class="form-control" id="" value="<%= signUpData.verificaSenha %>">
-        <p style="color: red"><%= signUpErros.verificaSenhaError %></p>
+        <input type="password" name="confirmaSenha" class="form-control" id="" value="<%= signUpData.confirmaSenha %>">
+        <p style="color: red"><%= signUpErros.confirmaSenhaError %></p>
         </div>
 
         <div class="mb-3">
