--- a/views/admin/listaPacientes.ejs
+++ b/views/admin/listaPacientes.ejs
@@ -15,7 +15,6 @@
         <table class="table table-bordered"> 
 
             <thead>
-    
                 <tr>
                     <th>Detalhe</th>
                     <th>ID</th>
@@ -53,7 +52,7 @@
     
         </table>
     
-            <a href="/admin/index">Voltar para a tela inicial</a>
+            <a href="/admin">Voltar para a tela inicial</a>
 
     </div>
 
