--- a/views/admin/indexAdmin.ejs
+++ b/views/admin/indexAdmin.ejs
@@ -4,16 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
     <title>Index</title>
 </head>
 <body>
-    Index admin.
-    <br>
-    <%= admin.nome %>
-    <%= admin.email %>
-    
-    <br>
-    <a href="/paciente/logout">Logout</a>
+
+    <div class="container">
+
+        <hr>
+            <h4> Index admin </h4>
+        <hr>
+
+        Nome: <%= admin.nome %> <br>
+        Email: <%= admin.email %> <br>
+        <a href="/admin/logout">Logout</a> <br><br>
+
+        <table class="table table-bordered">
+
+            <thead>
+
+                <tr>
+                    <th><a href="/admin/pacientes">Lista de pacientes</a></th>
+                </tr>
+
+            </thead>
+
+        </table>
+
+    </div>
 
 </body>
+<script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 </html>
