--- a/views/paciente/cadastropaciente.ejs
+++ b/views/paciente/cadastropaciente.ejs
@@ -134,8 +134,13 @@
             </div>
            </div>
            
-            <button type="submit" 
-		          class="btn btn-success">Cadastrar</button>
+            <div class="container">
+            <div class="row">
+              <div class="col text-center">
+                <button type="submit"class="btn btn-success w-50">Cadastrar</button>
+              </div>
+            </div>
+          </div> 
 		</form>
 
             </div>
