--- a/views/partials/navbarpaciente.ejs
+++ b/views/partials/navbarpaciente.ejs
@@ -15,6 +15,7 @@
         
           <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
             <a class="dropdown-item" href="">Meus dados</a>
+            <a class="dropdown-item" href="">Consultas e exames agendados</a>
             <a class="dropdown-item" href="">Resultados de exames</a>
             <a class="dropdown-item" href="">Sair</a>
           </div>
