--- a/views/paciente/cadastropaciente.ejs
+++ b/views/paciente/cadastropaciente.ejs
@@ -6,7 +6,7 @@
 <body>
   <%- include ('partials/navbar.ejs') %>
       <br>
-      <div class="container- d-flex justify-content-center align-items-center">
+      <div class="container- d-flex justify-content-center align-items-center rounded">
         <form name="formpaciente" id="formpaciente" class="border bg-white
         p-3 rounded align-items-center" style= "width: 750px"> 
         <h2 class="text-center p-3" >Cadastre-se como paciente</h2>
