--- a/views/partials/navbarprofissional.ejs
+++ b/views/partials/navbarprofissional.ejs
@@ -12,6 +12,9 @@
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="/profissional/consultas">Consultas</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/profissional/vagas">Dias de atendimento</a>
+          </li>
           <div class="dropdown">
             <a class="btn bg-dark text-white dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
               Minha conta
